M Warner Losh           <imp@village.org>               20 Jan 2002
Mario Frasca                                            20 Jan 2000-14 Feb 2000
Paul Nasrat             <pnasrat@uk.now.com>            29 Oct 2001-20 Nov 2001
Per Olofsson            <MagerValp@cling.gu.se>         25 Feb 2000
Peter L Vachuska        <pvachusk@nconnect.net>         13 Aug 2001
Riley Williams          <rhw@MemAlpha.cx>               16 Nov 1998-24 Feb 2002
Roman Festchook         <roma@polesye.net>              27 Oct 2001
Simon Weijgers          <simon@weijgers.com>            16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams       <tgm9999@yahoo.com>             27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Thu Mar  7 14:47:03 EET 2002	Harry Kalogirou <harkal@gmx.net>

	* Added MSS tcp option transmition.
	* Fixed do_fork() bug, it was leaving dummy tasks on the
	  task table under memory shortage.

Mon Mar  4 01:04:28 EET 2002	Harry Kalogirou <harkal@gmx.net>

	* This is ELKS 0.1.0-pre4

	* TCP/IP accept bug.
	* Reduced the TIME_WAIT expire from 2mins to 30 secs.
	  This helps keep down the number of active TCP control blocks.
	* Fixed final "write config file" dialog in menuconfig.

Sun Feb 24 14:50:29 GMT 2002	Riley Williams <rhw@memalpha.cx>

	* Made ELKS not rely on the Linux kernel source being present for
	  the error values, by importing the Linux 2.5.5 errno.h files
	  into the ELKS tree. Also standardised the way this header file
	  is included.

Sun Feb 24 12:01:54 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* Fixed #else and #endif to not fox the bcc -ansi option.
	* Reformatted scripts/Configure in a consistent style.
	* Reformatted scripts/Menuconfig in a consistent style.

Wed Feb 20 12:27:08 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* Added syscall to return kernel version string. This can be