@@ -23,13 +23,17 @@ Mario Frasca                                            20 Jan 2000-14 Feb 2000
 Paul Nasrat             <pnasrat@uk.now.com>            29 Oct 2001-20 Nov 2001
 Per Olofsson            <MagerValp@cling.gu.se>         25 Feb 2000
 Peter L Vachuska        <pvachusk@nconnect.net>         13 Aug 2001
-Riley Williams          <rhw@MemAlpha.cx>               16 Nov 1998-24 Feb 2002
+Riley Williams          <rhw@MemAlpha.FSlife.Co.UK>     16 Nov 1998-28 Mar 2002
 Roman Festchook         <roma@polesye.net>              27 Oct 2001
 Simon Weijgers          <simon@weijgers.com>            16 Sep 1998-15 Nov 1999
 Simon Wood                                               6 Jan 2000-12 Jan 2000
 Thomas McWilliams       <tgm9999@yahoo.com>             27 Aug 1999- 2 Apr 2001
 
 -------------------------------------------------------------------------------
+
+Thu Mar 28 23:06:53 GMT 2002	Riley Williams <rhw@MemAlpha.FSlife.Co.UK>
+
+	* Add options to select root device.
 
 Thu Mar  7 14:47:03 EET 2002	Harry Kalogirou <harkal@gmx.net>
 
